# TheCollectorRoom

./: CMakeLists.txt  command.txt
include/: Animal.h  Camera.h  Furniture.h  Geometry.h  Item.h  Object3D.h  Room.h
src/: Animal.cpp  Camera.cpp  Furniture.cpp  Geometry.cpp  Item.cpp  Object3D.cpp  Room.cpp  main.cpp
